--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,31 @@
     padding: 0;
     font-family: 'Indie Flower', cursive;
 }
+
+
+button, link, a, .dropLogout, .logout, .edit, .delete, .save, .add, .collectionTitle{
+    cursor: pointer;
+}
+
+button:focus{
+    outline: 0;
+}
+
+button:hover, button:active, link:hover, link:active, a:hover, a:active, .dropLogout:hover, .dropLogout:active, .logout:hover, .logout:active, .edit:hover, .edit:active, .delete:hover, .delete:active, .save:hover, .save:active, .add:hover, .add:active, .collectionTitle:hover, .collectionTitle:active{
+    animation: shake 0.5s;
+    animation-iteration-count: .4;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
