changed header, profile, and collections page

--- a/client/src/Styles/Collections.css
+++ b/client/src/Styles/Collections.css
@@ -2,8 +2,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 312px;
-    width: 48%;
+    height: 267px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
