--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar{
-    height: 150px;
+    height: 100px;
     width: 100%;
-    background-image: linear-gradient(#4a6ba2, white);
+    background-color: #404040;
     display: grid;
     grid-gap: 2%;
     grid-template-columns: 2fr 4fr 1fr 1fr  1fr 1fr 1fr 1fr;
@@ -122,9 +122,7 @@
 .dropbtn{
     background-color: #ffffff03;
     border: none;
-    /* position: fixed;
-    margin-top: 5%;
-    margin-right: -5%; */
+
 }
 
 .dropbtn > div{
